<resources>
    <string name="app_name">Baking App</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="next_step">Next step</string>
    <string name="previous_step">Previous step</string>
    <string name="ingredients">Ingredients</string>
    <string name="quantity">Quantity</string>
    <string name="ingredient">Ingredient</string>
    <string name="steps">Steps</string>
    <string name="measure">Measure</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="baking_channel_name" translatable="false">baking_notification_channel</string>
    <string name="baking_channel_description" translatable="false">baking_notification_channel_description</string>
    <string name="appwidget_text">Ingredient 1\nIngredient 2</string>
    <string name="add_widget">Add widget</string>
    <string name="recipe_ingredients">Recipe ingredients</string>
    <string name="refresh_to_see_a_new_recipe">Refresh to see a new recipe!</string>
    <string name="change_recipe">Change recipe</string>
    <string name="recipe_toolbar_image">Recipe toolbar image</string>
    <string name="previous_button">Previous button</string>
    <string name="rewind_button">Rewind button</string>
    <string name="play_button">Play button</string>
    <string name="pause_button">Pause button</string>
    <string name="fast_forward_button">Fast forward button</string>
    <string name="recipe_image">Recipe image</string>
    <string name="no_recipe_selected">No recipe selected</string>
</resources>
